--- a/app/views/admin/products/show.html.haml
+++ b/app/views/admin/products/show.html.haml
@@ -52,7 +52,7 @@
             %tr
               %td
                 - if gift.primary_gift_image&.image?
-                  = image_tag gift.primary_gift_image.image_url(:small)
+                  = image_tag gift.primary_gift_image.image_url(:small), alt: gift.title
               %td= link_to gift.name, [:admin, gift]
               %td= gift.wrapt_sku
 
@@ -60,6 +60,6 @@
       %b Images:
     - @product.product_images.each do |product_image|
       %p
-        = image_tag product_image.image_url(:small)
+        = image_tag product_image.image_url(:small), alt: @product.title
 
 
