--- a/app/views/ecommerce/vendor_confirmations/_order_details.haml
+++ b/app/views/ecommerce/vendor_confirmations/_order_details.haml
@@ -20,7 +20,7 @@
             %td
               - url = product.primary_product_image&.image&.url(:small)
               - if url.present?
-                = image_tag url, class: 'img-responsive', style: 'max-width: 88px; padding-right: 4px;'
+                = image_tag url, class: 'img-responsive', style: 'max-width: 88px; padding-right: 4px;', alt: product.title
               - else
                 %img
             %td= product.description
