--- a/app/views/funds/index.haml
+++ b/app/views/funds/index.haml
@@ -1,1 +1,1 @@
-=image_tag 'create-fund-gift-mock-up.png', {style: "margin: 0 auto; display: block;"}
+=image_tag 'create-fund-gift-mock-up.png', {style: "margin: 0 auto; display: block;", alt: ''}
