--- a/app/views/admin/product_images/_product_image.haml
+++ b/app/views/admin/product_images/_product_image.haml
@@ -1,5 +1,5 @@
 - if product_image.image_processed?
-  = image_tag product_image.image_url(:small)
+  = image_tag product_image.image_url(:small), alt: product_image.product&.title
 - else
   .admin__image-loading-wrapper
     = image_tag 'ajax-loader.gif', class: 'loading-spinner'
