--- a/app/views/admin/survey_question_option_images/edit.haml
+++ b/app/views/admin/survey_question_option_images/edit.haml
@@ -1,9 +1,9 @@
 = simple_form_for  [:admin, @survey_question_option], url: admin_survey_question_option_image_path(@survey, @survey_question, @survey_question_option), remote: true, html: {data: {type: 'html', edit_option_image_form: true}} do |form|
-  
+
   %p= @survey_question_option.text
 
   .form-inputs
-    = image_tag @survey_question_option.image_url(:small) if @survey_question_option.image?
+    = image_tag(@survey_question_option.image_url(:small), alt: '') if @survey_question_option.image?
 
     - verb = (@survey_question_option.image? ? 'Change' : 'Add' )
     = form.input :image, as: :file, label: "#{verb} Image", input_html: {data: {survey_option_image_input: true, url: admin_survey_question_option_image_path(@survey, @survey_question, @survey_question_option)}}
