--- a/app/views/customer_order_mailer/order_shipped.html.haml
+++ b/app/views/customer_order_mailer/order_shipped.html.haml
@@ -17,7 +17,7 @@
                 %tr
                   %td{style: "text-align: left; vertical-align: middle; width: 88px;"}
                     - url = @purchase_order.gift.primary_gift_image.image.url(:small)
-                    %img{src: url, style: "width: 88px"}
+                    %img{src: url, style: "width: 88px", alt: @purchase_order.gift_name}
                   %td{style: "text-align: left; vertical-align: middle; padding-left: 4px;"}
                     %p{style: "padding-bottom: 0; font-size: 16px; font-weight: normal; font-family: Helvetica, Arial, sans-serif;  color: #4D4C4D;"}
                       =@purchase_order.gift_name
