--- a/app/views/admin/gifts/show.html.haml
+++ b/app/views/admin/gifts/show.html.haml
@@ -35,6 +35,9 @@
       %b Wrapt sku:
       = @gift.wrapt_sku
     %p
+      %b Units Available:
+      = @gift.units_available
+    %p
       %b Available to Customers?
       = @gift.available?
 
