--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -8,8 +8,7 @@
         - if require_invites? && current_user.blank?
           = render "shared/invitation_request"
         - else
-          - url = giftees_path
-          = simple_form_for @question_response, url: url, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
+          = simple_form_for @question_response, url: giftees_path, html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
             - if current_user&.admin?
               = hidden_field_tag :survey_id, @survey.id
             = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
