--- a/app/views/ecommerce/checkout/_edit_review_summary_items.haml
+++ b/app/views/ecommerce/checkout/_edit_review_summary_items.haml
@@ -1,5 +1,6 @@
-= render 'ecommerce/checkout/edit_review_summary_item', label: 'Subtotal', co_attr: :subtotal_in_dollars, value_in_dollars: true, value: nil, customer_order: customer_order
-= render 'ecommerce/checkout/edit_review_summary_item', label: 'Tax', co_attr: :taxes_in_dollars, value_in_dollars: true, value: nil, customer_order: customer_order
+= render 'ecommerce/checkout/edit_review_summary_item', label: 'Subtotal', co_attr: :subtotal_in_dollars, value_in_dollars: true, value: nil, customer_order: customer_order, markout: false
+= render 'ecommerce/checkout/edit_review_summary_item', label: 'Tax', co_attr: :taxes_in_dollars, value_in_dollars: true, value: nil, customer_order: customer_order, markout: false
 - if customer_order.gift_wrapt?
-  = render 'ecommerce/checkout/edit_review_summary_item', label: 'Gift Wrapt', co_attr: nil, value_in_dollars: false, value: 'Complimentary', customer_order: customer_order
-= render 'ecommerce/checkout/edit_review_summary_item', label: 'Shipping', co_attr: nil, value_in_dollars: true, value: customer_order.combined_handling_in_dollars, customer_order: customer_order
+  = render 'ecommerce/checkout/edit_review_summary_item', label: 'Gift Wrapt', co_attr: :uncharged_gift_wrapt_fee_in_dollars, value_in_dollars: true, value: nil , customer_order: customer_order, markout: true
+= render 'ecommerce/checkout/edit_review_summary_item', label: 'Curation Fee', co_attr: nil, value_in_dollars: true, value: CustomerOrder.uncharged_curation_fee_in_dollars, customer_order: customer_order, markout: true
+= render 'ecommerce/checkout/edit_review_summary_item', label: 'Shipping', co_attr: nil, value_in_dollars: true, value: customer_order.combined_handling_in_dollars, customer_order: customer_order, markout: false
