wip email changes

--- a/app/views/customer_order_mailer/cannot_ship.html.haml
+++ b/app/views/customer_order_mailer/cannot_ship.html.haml
@@ -1,6 +1,6 @@
 -# TODO: Needs action for if they want us to find out when another might be available (or remove that wording)
 %body{style: "background-color: #fff; font-family: Helvetica, Arial, sans-serif;"}
-  %table{style: "background-color: #F2F5F9; max-width: 700px; margin: 0 auto;"}
+  %table{style: "background-color: #F2F5F9; max-width: 700px; min-width: 90%; margin: 0 auto;"}
     %tr
       %td{style: "padding: 40px;"}
         %h1{style: "font-size: 28px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center; color: #4D4C4D; margin-bottom: 14px;"}
