--- a/app/views/password_reset_requests_mailer/reset_password_email.html.haml
+++ b/app/views/password_reset_requests_mailer/reset_password_email.html.haml
@@ -1,5 +1,5 @@
 %body{style: "background-color: #fff; font-family: Helvetica, Arial, sans-serif;"}
-  %table{style: "background-color: #F2F5F9; max-width: 700px; margin: 0 auto;"}
+  %table{style: "background-color: #F2F5F9; max-width: 700px; min-width: 90%; margin: 0 auto;"}
     %tr
       %td{style: "padding: 40px;"}
         %h1{style: "font-size: 32px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center;"} 
