--- a/app/views/vendor_mailer/acknowledge_order_request.html.haml
+++ b/app/views/vendor_mailer/acknowledge_order_request.html.haml
@@ -1,5 +1,5 @@
 %body{style: "background-color: #fff; font-family: Helvetica, Arial, sans-serif;"}
-  %table{style: "background-color: #F2F5F9; max-width: 700px; margin: 0 auto;"}
+  %table{style: "background-color: #F2F5F9; max-width: 700px; min-width: 90%; margin: 0 auto;"}
     %tr
       %td{style: "padding: 40px;"}
         %h1{style: "font-size: 28px; font-family: Helvetica, Arial, sans-serif; font-weight: normal; text-align: center; color: #4D4C4D; margin-bottom: 14px; line-height: 1.2;"}
@@ -11,10 +11,8 @@
           Please follow
           = link_to ecommerce_vendor_confirmation_url(@purchase_order.vendor_token)  do
             this link
-          to tell us if you can fulfill this order. 
-        %p{style: "text-align: left; font-size: 18px; color: #4d4c4d; font-weight: normal; line-height: 1.1;"}
-          After all other vendors and purchase orders associated with this customer's entire order are verified, you will receive the information to complete fulfillment such as shipping labels, a packing slip, etc.
-        %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px;"}
+          to review, confirm availability, accept the order, and get a shipping label. 
+        %table{style: "margin: 60px auto 40px; border: 1px solid #E2E2E2; max-width: 600px; min-width: 80%"}
           %tr
             %th{style: "padding: 4px; text-align: left; vertical-align: top; font-weight: bold; color: #4D4C4D;"} SKU
             %th{style: "padding: 4px; text-align: left; vertical-align: top; font-weight: bold; color: #4D4C4D;"} Description
