emails content and stying [#151841714]

--- a/app/views/customer_order_mailer/cannot_ship.text.erb
+++ b/app/views/customer_order_mailer/cannot_ship.text.erb
@@ -6,4 +6,5 @@ other recommended gifts and choose from her personalized collection or
 would you prefer for us to contact the artist to see when another might be
 available?
 
-Button: View More Gift Recommendations
+View More Gift Recommendations
+<%= giftee_gift_recommendations_url(@profile) %>
