--- a/app/views/customer_order_mailer/order_shipped.html.haml
+++ b/app/views/customer_order_mailer/order_shipped.html.haml
@@ -35,7 +35,7 @@
                 #{@customer_order.profile_name}
                 %br
                 = format_address(object: @customer_order, prefix: :ship)
-            %td{style: "padding: 12px 24px; text-align: left; vertical-align: top; width: 50%"}
+            %td{style: "padding: 12px 24px; text-align: right; vertical-align: top; width: 50%"}
               %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; color: #4D4C4D;"}
                 Expected Delivery
               %p{style: "padding-bottom: 0; font-size: 13px; font-family: Helvetica, Arial, sans-serif; color: #767676;"}
