--- a/app/views/admin/ecommerce/purchase_orders/show.haml
+++ b/app/views/admin/ecommerce/purchase_orders/show.haml
@@ -6,7 +6,7 @@
       = @order.order_number
       = link_to 'Send PO notification to vendor', url_for(action: :send_vendor_notification), :method => :post, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-warning btn-xs'
       = link_to 'Cancel order', url_for(action: :cancel_order), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
-      - if @order.shipping_label.present?
+      - if @order.shipping_label.present? || Rails.env.development?
         = link_to 'Send order-shipped notification', url_for(action: :send_order_shipped_notification), :method => :post, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-warning btn-xs'
 
       = link_to 'View confirmation page for vendor', ecommerce_vendor_confirmation_path(id: @order.vendor_token), class: 'btn btn-default btn-xs'
