center the quiz buttons in the modal [#152334954]

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -170,6 +170,10 @@ label.btn-multiple-choice-option {
     }
   }
 }
+.btn.btn-multiple-choice-option,
+label.btn-multiple-choice-option {
+  min-width: 140px;
+}
 .btn.btn-multiple-choice-option {
   @media(max-width: $screen-sm-max) {
     max-width: 310px;
