constrain button width change to modal [#152334954]

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -170,8 +170,8 @@ label.btn-multiple-choice-option {
     }
   }
 }
-.btn.btn-multiple-choice-option,
-label.btn-multiple-choice-option {
+.modal .btn.btn-multiple-choice-option,
+.modal label.btn-multiple-choice-option {
   min-width: 140px;
 }
 .btn.btn-multiple-choice-option {
