[#152236079] remove preferences from my account subnav

--- a/app/views/my_account/_sub_nav.haml
+++ b/app/views/my_account/_sub_nav.haml
@@ -1,5 +1,5 @@
 -# [link_text, link_path, link_controller]
-- links = [['giftees', my_account_giftees_path, 'giftees'], ['profile', my_account_profile_path, 'profiles'], ['orders', my_account_orders_path, 'orders'], ['billing', my_account_billing_index_path, 'billing'], ['preferences', my_account_preferences_path, 'preferences']]
+- links = [['giftees', my_account_giftees_path, 'giftees'], ['profile', my_account_profile_path, 'profiles'], ['orders', my_account_orders_path, 'orders'], ['billing', my_account_billing_index_path, 'billing']]
 .container.ma-container
   %h2.light My Account
   -# only visible on mobile to trigger nav open/closed
