[#152152156] padding adjustment for my account sub nav

--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -292,7 +292,7 @@
   a {
     border-bottom: 4px solid transparent;
     display: block;
-    padding: 8px 16px;
+    padding: 10px 14px 6px;
     color: $gray-006;
     @include akkurat-regular;
     letter-spacing: 1px;
