--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -13,7 +13,8 @@
                 %h4 Create Your Account
               .col-sm-6{style: 'text-align: right'}
                 Already Have an Account?
-                = link_to new_user_session_path, data: {loads_in_pjax_modal: true, toggle: "fade out", target: '.top-navigation__menu'} do
+                - return_to = create_via_redirect_giftee_survey_completion_path(@profile, @survey_response)
+                = link_to new_user_session_path(return_to: return_to), data: {loads_in_pjax_modal: true, toggle: "fade out", target: '.top-navigation__menu'} do
                   Sign In
 
             .row
