--- a/app/views/gift_recommendations/_gift.haml
+++ b/app/views/gift_recommendations/_gift.haml
@@ -4,7 +4,7 @@
 
 .gr-carousel__gift.clearfix
   .gr-carousel__gift-image
-    - gift_images = load_gift_image_carousel_data(gift.gift_images)
+    - gift_images = load_gift_image_carousel_data(gift.carousel_images)
     = carousel(carousel: gift_images, unique_carousel_name: 'gr-image-carousel', slide_content_singular: 'image', container:'.gr-carousel', parent_slide_index: index)
   .gr-carousel__gift-content.pl2.pt1.pr1
     .pull-right.text-right.pb1
