rewrapt and about pages

--- a/app/views/static_pages/page_404.haml
+++ b/app/views/static_pages/page_404.haml
@@ -14,4 +14,4 @@
           %span
             Would you like to
             =succeed '?' do
-              =link_to 'read about our makers and try our gifter\'s quiz', science_of_gifting_path
+              =link_to 'read about our makers and try our gifter\'s quiz', rewrapt_path
