--- a/app/assets/stylesheets/modules/_about_pages.scss
+++ b/app/assets/stylesheets/modules/_about_pages.scss
@@ -67,7 +67,8 @@ sup:last-child {
 
 .sg-content,
 .sg-quote,
-.rewrapt-content {
+.rewrapt-content,
+.about-content {
   color: $gray-007;
   text-align: center;
   margin: 0px auto;
@@ -86,6 +87,38 @@ sup:last-child {
   p:last-child {
     margin-bottom: 0px;
   }
+}
+
+.about-content {
+  text-align: left;
+  margin-bottom: 180px;
+  .row {
+    margin-bottom: 40px;
+  }
+  .about-page__tagline {
+    text-align: left;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .about-page__header {
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  .icon {
+    width: 14px;
+    height: 14px;
+    fill: $blue-005;
+  }
+}
+
+.about-page__mv p {
+  border-left: 2px solid $blue-005;
+  padding-left: 10px;
+}
+
+.about-page__note {
+  display: inline-block;
+  text-align: left;
 }
 
 .rewrapt-content {
