--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -24,7 +24,7 @@
           = pluralize(profile.gift_selections.count, 'item')
         in your cart
 
-      - if ENV.fetch('CHECKOUT_ENABLED') { 'false' } == 'true'
+      - if checkout_enabled?
         = link_to 'CHECK OUT', ecommerce_checkout_start_path(giftee_id: profile.id), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', id: 'js-checkout', method: :patch
       - else
         = link_to 'CHECK OUT COMING SOON', 'javascript:void(0)', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
