rewrapt stories: smaller images and copy edits [#151692644]

--- a/app/views/static_pages/rewrapt.haml
+++ b/app/views/static_pages/rewrapt.haml
@@ -9,7 +9,7 @@
     .col-xs-12.col-md-10.col-md-offset-1.text-center
       .rewrapt-content
         %p
-          We call this ReWrapt – a new way of thinking about what makes a gift not just good, but great. Sometimes it’s the story of the Maker, the materials or the artisan craft that inspires us and makes it a very special gift. 
+          We call this ReWrapt – a new way of thinking about what makes a gift not just good, but great. Sometimes it’s the story of the Maker, the materials, or the artisan craft that inspires us and makes it a very special gift. 
         %p
           Each item in the Wrapt collection is chosen with this in mind. 
         %p
