--- a/app/views/customer_order_mailer/cannot_ship.html.haml
+++ b/app/views/customer_order_mailer/cannot_ship.html.haml
@@ -1,4 +1,3 @@
--# TODO: Needs action for if they want us to find out when another might be available (or remove that wording)
 %body{style: "background-color: #fff; font-family: Helvetica, Arial, sans-serif;"}
   %table{style: "background-color: #F2F5F9; max-width: 700px; min-width: 90%; margin: 0 auto;"}
     %tr
@@ -10,8 +9,7 @@
           Because our gifts are one-of-a-kind and often limited editions, we
           learned that your gift is currently out of stock. Would you like to
           review #{@profile.name}’s other recommended gifts and choose from her
-          personalized collection or would you prefer for us to contact the
-          artist to see when another might be available?
+          personalized collection?
         = link_to "View More Gift Recommendations", giftee_gift_recommendations_url(@profile), style: "display: block; background-color: #ABBAD5; color: #333; text-transform: uppercase; font-size: 12px; letter-spacing: 1.4px; padding: 16px; text-align: center; text-decoration: none; line-height: 1;"
     %tr
       %td{style: "padding-bottom: 60px; text-align: center;"}
