--- a/app/views/customer_order_mailer/cannot_ship.text.erb
+++ b/app/views/customer_order_mailer/cannot_ship.text.erb
@@ -2,9 +2,7 @@ Dear <%= @user.full_name %>,
 
 Because our gifts are one-of-a-kind and often limited editions, we learned
 that your gift is currently out of stock. Would you like to review <% @customer_order.profile_name %>’s
-other recommended gifts and choose from her personalized collection or
-would you prefer for us to contact the artist to see when another might be
-available?
+other recommended gifts and choose from her personalized collection?
 
 View More Gift Recommendations
 <%= giftee_gift_recommendations_url(@profile) %>
